--- a/lay1.css
+++ b/lay1.css
@@ -1,92 +1,80 @@
-body {
+* {
     margin: 0;
 }
 
-nav {
-    overflow: hidden;
-    width: 100%;
-    height: 80px;
-    background-color: rgba(0, 0, 0, 0.726);
+.container {
+    width: 60%;
+    margin: auto;
 }
 
-nav h3 {
-    margin-left: 15%;
-    font-size: 25px;
+.bg1 {
+    background-color: #333333;
+}
+
+.bg2 {
+    background-color: #dddddd;
+}
+
+.fleft {
+    float: left;
+}
+
+.fright {
+    float: right;
+}
+
+header {
+    width: 100%;
+    padding: 2% 0;
     color: white;
+}
+
+section {
+    overflow: auto;
 }
 
 .mainbox1 {
     width: 100%;
-    height: 400px;
     background-color: white;
-}
-
-.box {
-    width: 70%;
-    height: 400px;
-    margin: auto;
 }
 
 .box_left {
     width: 50%;
-    height: 360px;
     float: left;
-    background-color: #eeeeec;
-}
-
-.box_left li {
-    font-size: 25px;
     font-size: 15px;
     font-weight: 800;
 }
 
+.box_left h3 {
+    text-align: center;
+}
+
 .box_left li:first-child {
-    font-weight: 800;
+    font-weight: 1000;
 }
 
 .box_left li:nth-child(3) {
     color: blue;
 }
 
-.box_left img {
-    float: right;
-    margin: -45% 5% 0 0;
-}
-
-.box_left h2 {
-    font-size: 25px;
-    font-weight: 800;
-    padding-left: 5%;
-}
-
-.box_left h3 {
-    font-size: 15px;
-    font-weight: 800;
-    padding-left: 5%;
-}
-
 .box_right {
     width: 50%;
-    height: 400px;
     float: left;
-    background-color: white;
+    font-size: 15px;
+    font-weight: 800;
+}
+
+.box_right p {
+    margin: 2% 0 2% 5%;
+    text-align: justify;
 }
 
 .box_right img {
-    float: left;
-    margin: -27% 0 0 5%;
-}
-
-.box_right h3 {
-    padding: 0% 5% 0 5%;
-    font-size: 15px;
+    margin-left: 5%;
 }
 
 .box_right h4 {
-    float: right;
-    font-size: 15px;
-    font-weight: 800;
-    padding: 0 5% 0 40%;
+    text-align: right;
 }
 
 .box_right ul {
@@ -97,26 +85,8 @@ nav h3 {
 }
 
 footer {
-    overflow: hidden;
     width: 100%;
-    height: 200px;
-    background-color: rgba(0, 0, 0, 0.726);
-}
-
-footer h2 {
-    margin: 2% 0 0 15%;
     color: white;
-}
-
-footer span {
-    margin-left: 15%;
-    float: left;
-    margin-top: 2%;
-    color: white;
-    font-size: 15px;
-    font-weight: 800;
-}
-
-footer .sp {
-    padding-left: 13%;
+    padding: 2% 0;
+    height: 30vh;
 }
