--- a/lay3.css
+++ b/lay3.css
@@ -36,10 +36,9 @@ section {
     overflow: auto;
 }
 
-.mainbox {
-    width: 960px;
-    height: 380px;
-    border: 1px solid grey;
+.mainbox img {
+    border: 1px solid #dedede;
+    padding: 8px;
 }
 
 .innbox {
@@ -54,17 +53,14 @@ section {
 }
 
 .bottom img {
+    border: 1px solid #dedede;
+    padding: 2%;
     margin: 0 3% 2% 0;
 }
 
 .bottom h2 {
     margin: 5% 0 5% 0;
-}
-
-.bottom h2::first-line {
-    content: '';
-    position: absolute;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #dedede;
 }
 
 .bottom h4 {
@@ -75,11 +71,6 @@ footer {
     margin: 5% 0;
 }
 
-footer::after {
-    content: '';
-    position: absolute;
-    border-top: 1px solid gray;
-    width: 970px;
-    top: 115%;
-    left: 14%;
+.fline {
+    border-top: 1px solid #dedede;
 }
