--- a/lay3.css
+++ b/lay3.css
@@ -30,6 +30,16 @@ nav li {
     float: right;
     padding: 2% 2%;
     margin-top: -5%;
+    border-top: 1px solid #dedede;
+    border-bottom: 1px solid #dedede;
+}
+
+nav a {
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: orange;
 }
 
 section {
@@ -39,6 +49,10 @@ section {
 .mainbox img {
     border: 1px solid #dedede;
     padding: 8px;
+}
+
+.mainbox img:hover {
+    border: 1px solid orange;
 }
 
 .innbox {
@@ -61,6 +75,7 @@ section {
 .bottom h2 {
     margin: 5% 0 5% 0;
     border-bottom: 1px solid #dedede;
+    padding-bottom: 2%;
 }
 
 .bottom h4 {
@@ -73,4 +88,5 @@ footer {
 
 .fline {
     border-top: 1px solid #dedede;
+    padding: 18px;
 }
